Merge from struct-reorg-merge-20050122 to struct-reorg-merge-20050630
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/struct-reorg-branch@103456 138bc75d-0d04-0410-961f-82ee72b054a4